syntax = "proto3";

import "google/protobuf/empty.proto";


package game;

option go_package = "./";

service Game {
	rpc Move(MoveRequest) returns (google.protobuf.Empty);
	rpc Status(GameID) returns (GameStatus);
	rpc NewGame(NewGameRequest) returns (GameID);
}

message GameID {
	int64 ID = 1;
}

message MoveRequest {
	int64 gameID = 1;
	int64 playerID = 2;
	string text = 3;
}
message NewGameRequest{
	repeated int64 playersID = 1;
}

message GameStatus {	
    string Description = 1;
    repeated ArrayButton Keyboard = 2;
}

message ArrayButton {
    repeated Button Buttons = 1;
}
message Button {
    string Text = 1;
    string CallbackData = 2;
}



