syntax = "proto3";

option go_package = "./leaderboard";

service Leaderboard {
    rpc GetLeaderboard(Player) returns (List) {}
}

message List {
    string s = 1;
}
message PlayerArray {
    repeated Player player = 1;
}

message Player {
    int32 wins = 1;
    string name = 2;
}